letzte korrekturen anfang

--- a/craft_sicherungWebsite/templates/fuerSie/index.html
+++ b/craft_sicherungWebsite/templates/fuerSie/index.html
@@ -31,11 +31,11 @@
     {% set entry = craft.entries.section('fuerSie').slug('chancekommt').one() %}
       <h1 style="padding-bottom: .5rem;"> {{ entry.text }}  </h1>
 
-      <div class="container achterspaltenlayout" id="video" style="margin-top: 0; padding-bottom: 51%; margin-bottom: 2rem;">
-        <iframe src="https://www.youtube.com/embed/oFzu5ElARTo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/oFzu5ElARTo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
-      <div id="anleser"> {{ entry.zusatzfeld1 }}</div>
+      <div id="anleser" style="padding-top: 2rem;"> {{ entry.zusatzfeld1 }}</div>
     </div>
   </div>
 
