--- a/craft_sicherungWebsite/templates/index.html
+++ b/craft_sicherungWebsite/templates/index.html
@@ -24,10 +24,12 @@
 <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-home-header.jpg').one().getUrl() }} " >
 
   <div class="container achterspaltenlayout" id="video">
+    <div class="embed-responsive embed-responsive-16by9 videoStart">
 <iframe src="https://www.youtube.com/embed/HQxVX1oX5dE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
   </div>
 
-<div class="container achterspaltenlayout text-center" style="padding-top: 5rem;">
+<div class="container achterspaltenlayout text-center" style="padding-top: 3rem;">
   <div id="anleser"> {{ entry.text }}</div>
 </div>
 
