--- a/craft_sicherungWebsite/templates/ueberUns/motivation.html
+++ b/craft_sicherungWebsite/templates/ueberUns/motivation.html
@@ -8,7 +8,7 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center no-padding" style="padding-top: 150px; position: relative;">
+<div class="container-fluid text-center no-padding" style="padding-top: 9rem; position: relative;">
 
   <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
