--- a/craft_sicherungWebsite/templates/blog/_entry/blogeintrag.html
+++ b/craft_sicherungWebsite/templates/blog/_entry/blogeintrag.html
@@ -88,7 +88,43 @@
 </div>
 
 <div class="col-sm-4"> <a href="https://aufbau-website.de/craft/web/blog"> Zurück zur Übersicht</a> </div>
+    <p>TEST</p>
 
+    {# @var commentsWork \twentyfourhoursmedia\commentswork\services\CommentsWorkService #}
+    {% set commentsWork = craft.commentsWork.service %}
+
+    {% if not currentUser and not commentsWork.allowAnonymous(entry) %}
+    <p>Anonymous commenting is not allowed. Please login.</p>
+    {% else %}
+    <div class="card bg-light">
+        <div class="card-header">
+            Leave a comment
+        </div>
+        <div class="card-body">
+            <form method="post"> action="{{ url('craft/vendor/twentyfourhoursmedia/comments-work/src/controllers//DefaultController') }}">
+                {{ csrfInput() }}
+                {{ signCommentForm(entry) }}
+                <input name="redirect" value="{{ craft.app.request.url }}#comments" type="hidden"/>
+                <input name="elementId" value="{{ entry.id }}" type="hidden"/>
+                <input name="siteId" value="{{ entry.siteId }}" type="hidden"/>
+                <input name="commentFormat" value="text" type="hidden"/>
+
+                <div class="form-group">
+                    <label for="comment-title">Title</label>
+                    <input name="title" id="comment-title" type="text" class="form-control"/>
+                </div>
+                <div class="form-group">
+                    <label for="comment-content">Comment</label>
+                    <textarea name="comment" rows="5" id="comment-content" class="form-control"></textarea>
+                </div>
+
+                <div>
+                    <input type="submit" class="btn btn-primary" value="Post comment"/>
+                </div>
+            </form>
+        </div>
+    </div>
+    {% endif %}
 <div class="col-sm-4">
 {% set criteria = {section: 'blog', orderBy: 'postDate'} %}
 {% set next = entry.getNext(criteria) %}
@@ -96,7 +132,7 @@
  <a href="{{ next.url }}" style="text-align: right;"> Nächster Beitrag > </a>
 {% endif %}
 </div>
-</div>
+</div>-->
 <hr style="border-width:2px; margin-top: 3rem; margin-bottom: 0;">
 
 </div> <!-- Die weiterführenden Links -->
