--- a/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
@@ -20,7 +20,7 @@
 
 <a class="btn btn-primary wandernderButton" href="https://aufbau-website.de/craft/web/spenden/patewerden.html#kind">Kinderpate werden</a>
 
-<div class="container-fluid text-center" style="padding-top: 150px; position: relative;" id="start">
+<div class="container-fluid text-center" style="padding-top: 9rem; position: relative;" id="start">
 
   <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
