--- a/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -168,7 +168,7 @@
     </div>
     {% endfor %}
   </div>
-  <a target="_blank" href="https://meinregenwald.de/"> <h3 style="color: #0062ae;"> Mehr Infos: www.meinregenwald.de </h3> </a>
+  <a target="_blank" href="https://mein-regenwald.de/"> <h3 style="color: #0062ae;"> Mehr Infos: www.mein-regenwald.de </h3> </a>
 </div>
 
 <div class="container achterspaltenlayout text-center" style="padding-top: 6rem; padding-bottom: 0;" id="gelingendesLeben">
