--- a/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
+++ b/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
@@ -17,7 +17,7 @@
 
 <a class="btn btn-primary wandernderButton" href="https://aufbau-website.de/craft/web/spenden/patewerden.html#land">Länderpate werden</a>
 
-<div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
+<div class="container-fluid text-center" style="padding-top: 9rem; position: relative;">
 
   <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
