--- a/craft_sicherungWebsite/templates/spenden/index.html
+++ b/craft_sicherungWebsite/templates/spenden/index.html
@@ -53,7 +53,7 @@ h3 p {
 
 
 
-  <div class="container-fluid" style="padding: 3rem 0; background-image: url({{ entry.bild.one().url }});">
+  <div class="container-fluid" style="padding: 3rem 15px; background-image: url({{ entry.bild.one().url }});">
     {% set entry = craft.entries.section('spenden').slug('pate-werden').one() %}
     <div class="row">
       <div class="col-sm-1"> </div>
@@ -81,16 +81,14 @@ h3 p {
 
       </div> <!-- Akkordion -->
 
-
-
-<div class="container achterspaltenlayout" style="padding-top: 2rem; padding-bottom: 5rem;">
+<div class="container achterspaltenlayout" style="padding-top: 2rem; padding-bottom: 5rem;" id="spendenfuerEinkaufen">
   {% set entry = craft.entries.section('spenden').slug('spendenmultiplikator').one() %}
   <div class="text-center" style="padding-bottom: 2rem;">
     <h2 style="padding-bottom: 1.5rem;"> {{ entry.title }} </h2>
     <div id="anleser"> {{ entry.anleser }}  </div>
   </div>
     <div class="card-deck">
-    <div class="card" style="background-color: #ffffff;">
+    <div class="card">
       <div class="wrapper" style="background-image: url({{ entry.bild.one().url }});">
         <a href="https://aufbau-website.de/craft/web/spenden/schenkenundspenden.html">
       <img class="card-img-top mx-auto d-block" style="max-height: 160px; max-width: 160px; margin-top: 2rem; margin-bottom: 2rem;"
@@ -103,7 +101,7 @@ h3 p {
     </div>
     </div>
 
-    <div class="card" style="background-color: #ffffff;">
+    <div class="card">
       <div class="wrapper" style="background-image: url({{ entry.bild.one().url }});">
         <a href="https://aufbau-website.de/craft/web/spenden/einkaufenundspenden">
       <img class="card-img-top mx-auto d-block" style="max-height: 160px; max-width: 160px; margin-top: 2rem; margin-bottom: 2rem;"
@@ -118,5 +116,12 @@ h3 p {
   </div>
 </div> <!-- Die zwei Boxen mit Spenden/Schenken & Einkaufen/Spenden -->
 
+<style media="screen">
+  #spendenfuerEinkaufen .card {
+    background-color: white;
+    border-radius: 0;
+    border-width: 0;
+  }
+</style>
 
 {% endblock %}
